--- a/probability-and-statistics/Source/main.tex
+++ b/probability-and-statistics/Source/main.tex
@@ -149,17 +149,16 @@
 
 
 
-\input{Kapitel1}
-\input{Kapitel2}
-\input{Kapitel3}
-\input{Kapitel4}
-\input{Kapitel5}
-\input{Kapitel6}
-\input{Kapitel7}
-\input{Kapitel8}
-\input{ex}
-\input{Kapitel10}
-\input{Kapitel9}
+\input{basics.tex}
+\input{zufallsvariable.tex}
+\input{diskrete-verteilung.tex}
+\input{verteilung.tex}
+\input{ungleichungen.tex}
+\input{schätzer.tex}
+\input{tests.tex}
+\input{multiple-choice.tex}
+\input{verteilungen-tabelle.tex}
+\input{sonstiges.tex}
 
 \end{multicols*}
 \end{document}
