--- a/probability-and-statistics/Source/multiple-choice.tex
+++ b/probability-and-statistics/Source/multiple-choice.tex
@@ -1,5 +1,6 @@
 \newpage
 \section{Multiple Choice}
+\begin{tiny}
 Seien $A1$, $A2$, $A3 \in \mathcal{F}$ paarweise unabhängige Ereignisse. Welche Aussage ist korrekt?
 \begin{itemize}
     \item[\checkmark] Die Ereignisse $A1$, $A2$, $A3$ sind nicht zwangsläufig unabhängig.
@@ -198,3 +199,4 @@ Fische gezählt.
     \left[T - 1.96 \frac{\sqrt{\theta(1-\theta)}}{\sqrt{2n}}, T + 1.96 \frac{\sqrt{\theta(1-\theta)}}{\sqrt{2n}}\right] = [0.13, 0.27].
     \]
 \end{enumerate}
+\end{tiny}
