--- a/probability-and-statistics/Source/sonstiges.tex
+++ b/probability-and-statistics/Source/sonstiges.tex
@@ -105,4 +105,5 @@ Es gilt:
 \[\sum_{k=0}^\infty q^k = \frac{1}{1 - q} \quad \text{for} \quad |q| < 1\]
 \[\sum_{k=0}^n q^k = \frac{1 - q^{n+1}}{1 - q} \quad \text{for} \quad q \neq 1\]
 \[(x + y)^n = \sum_{k=0}^n \binom{n}{k} x^{n-k} y^k\]
+\includegraphics*[width=\columnwidth]{transformation.png}
 \newpage
