--- a/probability-and-statistics/Source/diskrete-verteilung.tex
+++ b/probability-and-statistics/Source/diskrete-verteilung.tex
@@ -57,7 +57,7 @@ wir schreiben $X \sim Geom (p)$ und es gilt:
   E[X]              & = \sum_{k = 0}^\infty  k \cdot (1-p)^{k-1} \cdot p
   = \frac{1}{1- (1-p)} = \frac{1}{p}                 \\
   E[X \cdot  (X-1)] & = \frac{2 (1-p)}{p^2}          \\
-  Var[X]            & = \frac{1-p}{p^2}\\
+  Var[X]            & = \frac{1-p}{p^2}
 \end{align*}
 \end{definition}
 \BoxStart{}
@@ -98,7 +98,7 @@ Erfolgsparameter $p$ sein $X$ die Wartezeit zum $r$-ten Erfolg ($r \in \N$):
 wir schreiben $X \sim NB (r, p)$ und es gilt:
 \begin{align*}
   E[X]   & = \sum_{i = 1}^r E[X_i] = \frac{r}{p}                  \\
-  Var[X] & = \sum_{i = 1}^r Var[X_i] = \frac{r \cdot  (1-p)}{p^2}\\
+  Var[X] & = \sum_{i = 1}^r Var[X_i] = \frac{r \cdot  (1-p)}{p^2}
 \end{align*}
 \end{definition}
 \begin{definition}{Hypergeometrische Verteilung}
