update cheatsheet WuS

--- a/probability-and-statistics/Source/basics.tex
+++ b/probability-and-statistics/Source/basics.tex
@@ -65,11 +65,15 @@ unter der Bedingung, dass $A$ eintritt wird definiert durch:
 \end{align*}
 \end{definition}
 \begin{definition}{Multiplikationsregel}
-Es gilt:
 \begin{align*}
   P[A \cap B] = P[A \;|\; B] \cdot P[B] = P[B \;|\; A] \cdot P[A]
 \end{align*}
 \end{definition}
+\subsection{Basic identity:}
+	Seien $a < b$ reelle Zahlen
+	\begin{equation*}
+		P [a < X \leq b] = F(b) - F(a)
+	\end{equation*}
 \subsection{Satz der totalen Wahrscheinlichkeit}
 Sei $A_1, \dots, A_n$ eine Zerlegung von $\Omega$ in paarweise disjunkte
 Ereignisse, d.h. $\bigcup_{i = 1}^n A_i = \Omega$ und $A_i \cap A_k = \emptyset
