--- a/probability-and-statistics/Source/diskrete-verteilung.tex
+++ b/probability-and-statistics/Source/diskrete-verteilung.tex
@@ -126,4 +126,6 @@ Verteilung auf der Menge $\N_0 = \{0, 1, 2, \dots\}$ mit Gewichtsfunktion:
 \end{align*}
 Ist eine Zufallsvariable $X$ Poisson verteilt mit Parameter $\lambda$
 schreiben wir $X \sim P (\lambda)$.
+Let \( X_1 \) and \( X_2 \) be two independent Poisson random variables with parameters \( \lambda_1 \) and \( \lambda_2 \), i.e., \( X_1 \sim \text{Poisson}(\lambda_1) \) and \( X_2 \sim \text{Poisson}(\lambda_2) \), then we have
+\[ X := X_1 + X_2 \quad \text{and} \quad X \sim \text{Poisson}(\lambda_1 + \lambda_2) \]
 \end{definition}
