--- a/probability-and-statistics/Source/schätzer.tex
+++ b/probability-and-statistics/Source/schätzer.tex
@@ -34,7 +34,7 @@ Sei $T$ ein Schätzer.
   \item $T$ ist erwartungstreu, falls $E_\vt[T] = \vt$ gilt. $T$ schätzt
         im Mittel also richtig.
   \item Bias $:= E_\vt[T] - \vt$. Ein erwartungstreuer Schätzer hat also keinen Bias.
-  \item Mittlere Quadratische Schätzfehler $MSE_\vt[T] := E_\vt[ {(T - \vt)}^2]$.
+  \item Mittlere Quadratische Schätzfehler $MSE_\vt[T] := E_\vt[ {(T - \vt)}^2] = E_\vt[{(T - \vt)}]^2 + Var[T]$.
   \item Eine Folge $T^{ (n)}$ von Schätzern heisst konsistent für $\vt$, falls $T^{
               (n)}$ für $n \ra \infty$ in $P_\vt$-Wahrscheinlichkeit gegen $\vt$ konvergiert,
         d.h. für jedes $\vt \in \varTheta$ gilt:
@@ -125,3 +125,32 @@ Seien $\zufallsvariablen$ i.i.d. $\sim \Normalverteilt$. Dann gilt:
   \item $\overline{X}_n$ und $S^2$ sind unabhängig
   \item $\frac{\overline{X}_n - \mu}{S / \sqrt{n}} = \frac{ \frac{\overline{X}_n - \mu}{\sigma / \sqrt{n}} }{S / \sigma} = \frac{ \frac{\overline{X}_n - \mu}{\sigma / \sqrt{n}} }{\sqrt{\frac{1}{n-1} \frac{n-1}{\sigma^2} S^2}} \sim t_{n-1}$
 \end{itemize}
+
+\subsection{Momentenmethode /-schätzer:}
+\begin{enumerate}
+  \item Sei $X_1, ..., X_n$ iid. eine Stichprobe.
+  \item Sei $\Theta$ ein $m$-dimensionaler Parameterraum.
+  \item Stelle für $\theta = (\theta_1,\dots \theta_m)$ ein Gleichungssystem auf, in dem das $k$-te empirische Moment dem $k$-ten Moment gleichgesetzt wird: $\hat m_k(x_1,\dots x_n) = g_k(\theta_1,\dots \theta_m), k \in \{1,\dots m\}.$
+  \item Der Vektor $\hat \theta(X_1,\dots X_m)$ heisst Momentenschätzer des Parameters $\theta.$
+\end{enumerate}
+
+\subsection{Empirisches Moment}
+Für $k \in \{1, \dots, m\}$ sei das $k$-te Moment empirische Moment
+oder Stichprobenmoment $\hat{m}_k$ der Realisierung $(x_1, \dots, x_n)$:
+\begin{equation*}
+  \hat{m}_k(x_1, \dots, x_n)  \frac{1}{n} \sum_{i=1}^{n}  x_i^k
+\end{equation*}
+
+Seien \(X_1, X_2\) diskrete unabhängige Zufallsvariablen mit Werten in \(\mathbb{N}_0\).
+\[
+  \forall k \in \mathbb{N}_0: \quad P[X_1 + X_2 = k] = \sum_{j=0}^{k} P[X_1 = j]P[X_2 = k - j].
+\]
+
+Die Momentenerzeugende Funktion einer diskreten Zufallsvariable \(X\) mit Werten in \(\mathbb{N}_0\) ist definiert als
+\[
+  \forall s \in \mathbb{R}: \quad M_X(s) = \sum_{k=0}^{\infty} e^{sk}P[X = k].
+\]
+
+\[
+  \forall s \in \mathbb{R}: \quad M_{X_1+X_2}(s) = M_{X_1}(s)M_{X_2}(s).
+\]
